Fix instruction layout so no "jumping"

--- a/src/styles/instructions.scss
+++ b/src/styles/instructions.scss
@@ -26,12 +26,12 @@
         display: flex;
         justify-content: left;
         div {
-            margin-right: 10px;
+            //margin-right: 10px;
         }
     }
     li li {
         list-style: none;
-        margin-left: 15px;
+        margin-left: 16px;
         padding-bottom: 5px;
         max-width: 250px;
         li {
